--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,9 @@
 body {
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  background-image: url(./images/bg-big.jpg);
+  background-repeat: no-repeat;
+  background-blend-mode: soft-light;
 }
 
 .cover-container {
@@ -76,5 +79,9 @@ header.mb-10 {
 
   .my-profile-desc {
     font-size: 1rem;
+  }
+
+  body {
+    background-position-x: -40rem;
   }
 }
