change style css for laptop screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,6 +63,10 @@ header.mb-10 {
   img.my-proflie-picture {
     width: 200px;
   }
+
+  div.lead {
+    margin-top: 5rem;
+  }
 }
 
 @media (max-width: 767.98px) {
